--- a/index.html
+++ b/index.html
@@ -72,34 +72,34 @@
             <div class="adver">
               <div class="owl-carousel owl-theme big-one">
                 <a href="/"
-                  ><img src="./assets/image/new-kingkong-9.webp" alt=""
+                  ><img src="./public/assets/image/new-kingkong-9.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/automobile.webp" alt=""
+                  ><img src="./public/assets/image/automobile.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/computer-office.webp" alt=""
+                  ><img src="./public/assets/image/computer-office.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/consumer-electronics.webp" alt=""
+                  ><img src="./public/assets/image/consumer-electronics.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/home-appliances.webp" alt=""
+                  ><img src="./public/assets/image/home-appliances.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/mother-&-kids.webp" alt=""
+                  ><img src="./public/assets/image/mother-&-kids.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/motorcycles.webp" alt=""
+                  ><img src="./public/assets/image/motorcycles.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/phone-accessories.webp" alt=""
+                  ><img src="./public/assets/image/phone-accessories.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/security-protection.webp" alt=""
+                  ><img src="./public/assets/image/security-protection.webp" alt=""
                 /></a>
                 <a href="/"
-                  ><img src="./assets/image/toys-hobbies.webp" alt=""
+                  ><img src="./public/assets/image/toys-hobbies.webp" alt=""
                 /></a>
               </div>
               <div class="ranking-main">
@@ -112,7 +112,7 @@
                   <div class="item">
                     <a href="">
                       <div class="item-img">
-                        <img src="./assets/image/socks.webp" alt="" />
+                        <img src="./public/assets/image/socks.webp" alt="" />
                       </div>
                       <div class="discount-deal">₫46,956</div>
                       <div class="deal-price">₫92,268</div>
@@ -122,7 +122,7 @@
                   <div class="item">
                     <a href=""
                       ><div class="item-img">
-                        <img src="./assets/image/glassess.webp" alt="" />
+                        <img src="./public/assets/image/glassess.webp" alt="" />
                       </div>
                       <div class="discount-deal">₫57,521</div>
                       <div class="deal-price">₫115,277</div></a
@@ -132,7 +132,7 @@
                   <div class="item">
                     <a href="">
                       <div class="item-img">
-                        <img src="./assets/image/item.webp" alt="" />
+                        <img src="./public/assets/image/item.webp" alt="" />
                       </div>
                       <div class="discount-deal">₫70,199</div>
                       <div class="deal-price">₫140,633</div>
@@ -142,7 +142,7 @@
                   <div class="item">
                     <a href="">
                       <div class="item-img">
-                        <img src="./assets/image/spider.webp" alt="" />
+                        <img src="./public/assets/image/spider.webp" alt="" />
                       </div>
                       <div class="discount-deal">₫75,834</div>
                       <div class="deal-price">₫108,233</div>
@@ -152,7 +152,7 @@
                   <div class="item">
                     <a href="">
                       <div class="item-img">
-                        <img src="./assets/image/camera.webp" alt="" />
+                        <img src="./public/assets/image/camera.webp" alt="" />
                       </div>
                       <div class="discount-deal">₫57,756</div>
                       <div class="deal-price">₫111,285</div>
@@ -166,7 +166,7 @@
           <div class="account-main">
             <div class="main">
               <div class="account">
-                <img src="./assets/image/account.webp" alt="" />
+                <img src="./public/assets/image/account.webp" alt="" />
               </div>
               <div class="text">Welcome to AliExpress</div>
 
@@ -182,27 +182,27 @@
 
               <div class="owl-carousel owl-theme new-deals">
                 <div class="product">
-                  <img src="./assets/image/helicopter.webp" alt="" />
+                  <img src="./public/assets/image/helicopter.webp" alt="" />
                   <div class="price">₫ 118,798</div>
                 </div>
 
                 <div class="product">
-                  <img src="./assets/image/light.webp" alt="" />
+                  <img src="./public/assets/image/light.webp" alt="" />
                   <div class="price">₫ 65,973</div>
                 </div>
 
                 <div class="product">
-                  <img src="./assets/image/loa.webp" alt="" />
+                  <img src="./public/assets/image/loa.webp" alt="" />
                   <div class="price">₫ 113,633</div>
                 </div>
 
                 <div class="product">
-                  <img src="./assets/image/airpots.webp" alt="" />
+                  <img src="./public/assets/image/airpots.webp" alt="" />
                   <div class="price">₫ 121,851</div>
                 </div>
 
                 <div class="product">
-                  <img src="./assets/image/garden-washer.webp" alt="" />
+                  <img src="./public/assets/image/garden-washer.webp" alt="" />
                   <div class="price">₫ 61,043</div>
                 </div>
               </div>
@@ -213,7 +213,7 @@
         <div class="summer-sale">
           <div class="sale-space">
             <a href="">
-              <img src="./assets/image/summer-sale.gif" alt="" />
+              <img src="./public/assets/image/summer-sale.gif" alt="" />
             </a>
           </div>
 
@@ -235,7 +235,7 @@
               <a href="">
                 <div class="product-img">
                   <img
-                    src="./assets/image/Microphone Wireless Headphones.webp"
+                    src="./public/assets/image/Microphone Wireless Headphones.webp"
                     alt=""
                   />
                 </div>
@@ -252,7 +252,7 @@
               <a href="">
                 <div class="product-img">
                   <img
-                    src="./assets/image/LCD Handwriting Board Children Electronic Hand Painted.webp"
+                    src="./public/assets/image/LCD Handwriting Board Children Electronic Hand Painted.webp"
                     alt=""
                   />
                 </div>
@@ -268,7 +268,7 @@
             <div class="products">
               <a href="">
                 <div class="product-img">
-                  <img src="./assets/image/2M LED.webp" alt="" />
+                  <img src="./public/assets/image/2M LED.webp" alt="" />
                 </div>
 
                 <div class="discount-precent"><b>-71%</b></div>
@@ -282,7 +282,7 @@
             <div class="products">
               <a href="">
                 <div class="product-img">
-                  <img src="./assets/image/bluetooth-speaker.webp" alt="" />
+                  <img src="./public/assets/image/bluetooth-speaker.webp" alt="" />
                 </div>
 
                 <div class="discount-precent"><b>-66%</b></div>
@@ -296,7 +296,7 @@
             <div class="products">
               <a href="">
                 <div class="product-img">
-                  <img src="./assets/image/flashlight.webp" alt="" />
+                  <img src="./public/assets/image/flashlight.webp" alt="" />
                 </div>
 
                 <div class="discount-precent"><b>-67%</b></div>
@@ -310,7 +310,7 @@
             <div class="products">
               <a href="">
                 <div class="product-img">
-                  <img src="./assets/image/atmosphere-lightning.webp" alt="" />
+                  <img src="./public/assets/image/atmosphere-lightning.webp" alt="" />
                 </div>
 
                 <div class="discount-precent"><b>-67%</b></div>
@@ -376,9 +376,9 @@
           <div class="continue">
             <h3>Or continue with</h3>
             <div class="icon">
-              <img src="./assets/image/google.png" alt="" />
-              <img src="./assets/image/facebook-icon.png" alt="" />
-              <img src="./assets/image/twitter-icon.png" alt="" />
+              <img src="./public/assets/image/google.png" alt="" />
+              <img src="./public/assets/image/facebook-icon.png" alt="" />
+              <img src="./public/assets/image/twitter-icon.png" alt="" />
             </div>
           </div>
         </div>
@@ -413,9 +413,9 @@
           <div class="continue">
             <h3>Or continue with</h3>
             <div class="icon">
-              <img src="./assets/image/google.png" alt="" />
-              <img src="./assets/image/facebook-icon.png" alt="" />
-              <img src="./assets/image/twitter-icon.png" alt="" />
+              <img src="./public/assets/image/google.png" alt="" />
+              <img src="./public/assets/image/facebook-icon.png" alt="" />
+              <img src="./public/assets/image/twitter-icon.png" alt="" />
             </div>
           </div>
         </div>
@@ -432,13 +432,13 @@
       <div class="container">
         <div class="site-server">
           <div class="site">
-            <img src="./assets/image/dollar.png" alt="" />
+            <img src="./public/assets/image/dollar.png" alt="" />
             <h4>Great value</h4>
             <p>We offer competitive prices on over 100 million items.</p>
           </div>
 
           <div class="site">
-            <img src="./assets/image/truck.png" alt="" />
+            <img src="./public/assets/image/truck.png" alt="" />
             <h4>Worldwide shopping</h4>
             <p>
               We ship to over 200 countries and regions, and our site comes in
@@ -447,13 +447,13 @@
           </div>
 
           <div class="site">
-            <img src="./assets/image/wallet.png" alt="" />
+            <img src="./public/assets/image/wallet.png" alt="" />
             <h4>Safe payment</h4>
             <p>Pay with the world’s most popular and secure payment methods.</p>
           </div>
 
           <div class="site">
-            <img src="./assets/image/verified.png" alt="" />
+            <img src="./public/assets/image/verified.png" alt="" />
             <h4>Shop with confidence</h4>
             <p>
               Our Buyer Protection policy covers your entire purchase journey.
@@ -461,13 +461,13 @@
           </div>
 
           <div class="site">
-            <img src="./assets/image/people.png" alt="" />
+            <img src="./public/assets/image/people.png" alt="" />
             <h4>Help center</h4>
             <p>Round-the-clock assistance for a smooth shopping experience.</p>
           </div>
 
           <div class="site">
-            <img src="./assets/image/dollar.png" alt="" />
+            <img src="./public/assets/image/dollar.png" alt="" />
             <h4>Shop better</h4>
             <p>
               <a href="https://sale.aliexpress.com/__pc/download_app_guide.htm"
@@ -482,11 +482,11 @@
           <div class="connected">
             <h3>Stay connected</h3>
             <div class="connected-img">
-              <a href=""><img src="./assets/image/facebook.png" alt="" /></a>
-              <a href=""><img src="./assets/image/twitter.png" alt="" /></a>
-              <a href=""><img src="./assets/image/instagram.png" alt="" /></a>
-              <a href=""><img src="./assets/image/messenger.png" alt="" /></a>
-              <a href=""><img src="./assets/image/whatsapp.png" alt="" /></a>
+              <a href=""><img src="./public/assets/image/facebook.png" alt="" /></a>
+              <a href=""><img src="./public/assets/image/twitter.png" alt="" /></a>
+              <a href=""><img src="./public/assets/image/instagram.png" alt="" /></a>
+              <a href=""><img src="./public/assets/image/messenger.png" alt="" /></a>
+              <a href=""><img src="./public/assets/image/whatsapp.png" alt="" /></a>
             </div>
           </div>
 
