--- a/check-out.html
+++ b/check-out.html
@@ -257,6 +257,6 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="./assets/js/check-out.js"></script>
+    <script type="module" src="./public/assets/js/check-out.js"></script>
   </body>
 </html>
