--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
     ></script>
 
     <script src="./public/assets/lib/owl-carousel/OwlCarousel2-2.3.4/docs/assets/owlcarousel/owl.carousel.min.js"></script>
-    <script src="./public/assets/js/owl-carousel.js"></script>
-    <script type="module" src="./public/assets/js/script.js"></script>
+    <script src="./assets/js/owl-carousel.js"></script>
+    <script type="module" src="./assets/js/script.js"></script>
   </body>
 </html>
