--- a/myorder.html
+++ b/myorder.html
@@ -192,6 +192,6 @@
         </div>
       </div>
     </footer>
-    <script src="./public/assets/js/myorder.js"></script>
+    <script src="./assets/js/myorder.js"></script>
   </body>
 </html>
