--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AliExpress</title>
-    <link rel="stylesheet" href="./assets/css/contain.css" />
-    <link rel="stylesheet" href="./assets/css/header.css" />
-    <link rel="stylesheet" href="./assets/css/more-to-love.css" />
-    <link rel="stylesheet" href="./assets/css/summer-sale.css" />
-    <link rel="stylesheet" href="./assets/css/super-deal.css" />
-    <link rel="stylesheet" href="./assets/css/footer.css" />
+    <link rel="stylesheet" href="/assets/css/contain.css" />
+    <link rel="stylesheet" href="/assets/css/header.css" />
+    <link rel="stylesheet" href="/assets/css/more-to-love.css" />
+    <link rel="stylesheet" href="/assets/css/summer-sale.css" />
+    <link rel="stylesheet" href="/assets/css/super-deal.css" />
+    <link rel="stylesheet" href="/assets/css/footer.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -575,7 +575,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script src="./assets/js/owl-carousel.js"></script>
-    <script type="module" src="./assets/js/script.js"></script>
+    <script src="/assets/js/owl-carousel.js"></script>
+    <script type="module" src="/assets/js/script.js"></script>
   </body>
 </html>
