--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </button>
             </div>
 
-            <a href="">
+            <a href="myorder.html">
               <div class="cart">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <div class="number">0</div>
@@ -179,13 +179,25 @@
           <div class="account-main">
             <div class="main">
               <div class="account">
-                <img src="./public/assets/image/account.webp" alt="" />
+                <img src="./assets/image/account.webp" alt="" />
               </div>
-              <div class="text">Welcome to AliExpress</div>
+              <div class="aftext">Hello Duy <br />Welcome to AliExpress</div>
 
-              <div class="button">
-                <button class="register">Register</button>
-                <button class="sign-in">Sign in</button>
+              <div class="account-contact">
+                <a href="">
+                  <img src="./assets/image/user.png" alt="" />
+                  <h4>Account</h4>
+                </a>
+
+                <a href="myorder.html">
+                  <img src="./assets/image/clipboard.png" alt="" />
+                  <h4>Orders</h4>
+                </a>
+
+                <a href="">
+                  <img id="log-out" src="./assets/image/logout.png" alt="" />
+                  <h4>Log out</h4>
+                </a>
               </div>
             </div>
 
@@ -348,96 +360,11 @@
           <div class="content"></div>
         </div>
       </div>
-    </div>
 
-    <div class="account-sign-up">
-      <div class="sign-up">
-        <div class="sign-up-title">
-          <h3>Sign up</h3>
-          <button><i class="fa-solid fa-xmark"></i></button>
-        </div>
-
-        <div class="form-sign-up">
-          <label for="">Full Name</label>
-          <input
-            type="text"
-            name="full-name"
-            id="full-name"
-            value="Full Name"
-          />
-
-          <label for="">Email address</label>
-          <input
-            type="email"
-            name="email-address"
-            id="email-sign-up"
-            value="Email address"
-          />
-
-          <label for="">Password</label>
-          <input
-            type="password"
-            name="password"
-            id="password-sign-up"
-            value="Password"
-          />
-
-          <label for="">Re-enter Password</label>
-          <input
-            type="password"
-            name="password"
-            id="password-re-enter"
-            value="Password"
-          />
-
-          <button class="create-account">Create New Account</button>
-
-          <div class="continue">
-            <h3>Or continue with</h3>
-            <div class="icon">
-              <img src="./public/assets/image/google.png" alt="" />
-              <img src="./public/assets/image/facebook-icon.png" alt="" />
-              <img src="./public/assets/image/twitter-icon.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="account-sign-in">
-      <div class="sign-in">
-        <div class="sign-in-title">
-          <h3>Sign In</h3>
-          <button><i class="fa-solid fa-xmark"></i></button>
-        </div>
-
-        <div class="form-sign-in">
-          <input
-            type="email"
-            name="email-address"
-            id="email-sign-in"
-            value="Email address"
-          />
-
-          <input
-            type="password"
-            name="password"
-            id="pass-sign-in"
-            value="Password"
-          />
-
-          <a href="">Forgot Password?</a>
-          <button class="sign-in-button">Sign In</button>
-
-          <div class="continue">
-            <h3>Or continue with</h3>
-            <div class="icon">
-              <img src="./public/assets/image/google.png" alt="" />
-              <img src="./public/assets/image/facebook-icon.png" alt="" />
-              <img src="./public/assets/image/twitter-icon.png" alt="" />
-            </div>
-          </div>
-        </div>
+      <div class="see-more-btn">
+        <a href="all-product.html"
+          ><button class="see-more">See More</button></a
+        >
       </div>
     </div>
 
