--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
                   alt=""
                 />
               </div>
-              <div class="aftext">Hello Duy <br />Welcome to AliExpress</div>
+              <div class="aftext">
+                Hello Nguyen Duc Duy <br />Welcome to AliExpress
+              </div>
 
               <div class="account-contact">
                 <a href="">
